fix apple overflow issues

--- a/src/components/container/style.css
+++ b/src/components/container/style.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-content: space-between;
-    backdrop-filter: blur(6px);
+    backdrop-filter: blur(10px);
 }
 
 .container h2,
