--- a/src/routes/about/style.css
+++ b/src/routes/about/style.css
@@ -74,8 +74,6 @@
 .text {
   position: relative;
   z-index:2;
-  backdrop-filter: blur(10px);
-  padding: .5rem 1rem;	
 }
 
 @media screen and (max-width: 890px) {
